# EXPERTS

./: .dockerignore  .gitignore  Jenkinsfile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml
core/backend/: .gitignore  alembic.ini  pyproject.toml  run.py
core/backend/app/: __init__.py  config.py  tasks.py
core/backend/app/api/v1/endpoints/: branch.py  user.py
core/backend/app/db/: session.py
core/backend/app/schemas/: __init__.py  enum.py  models.py  schemas.py
core/backend/app/security/: dependencies.py  manager.py
core/backend/app/utils/: helpers.py  jwt.py
core/backend/migrations/: env.py
core/frontend/: package.json
core/frontend/src/layouts/: Layout.astro
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/jenkins/: Dockerfile
docker/nginx/: default.conf
